// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OrderListItem stories snapshot > Default story renders and matches snapshot 1`] = `
<a
  class="block transition-opacity hover:opacity-95 m-0"
  href="/account/orders/ORD-2024-001"
>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui shadow-ui order-list-item-card py-0 border-0 border-b border-separator hover:bg-transparent"
    data-slot="card"
  >
    <div
      class="p-6 space-y-4 border-b border-separator"
      data-slot="card-content"
    >
      <div
        class="flex flex-wrap items-start justify-between -mx-6 -mt-6 px-6 pt-3 pb-3 mb-6 border-b border-separator bg-muted"
      >
        <div
          class="flex flex-wrap gap-x-8 gap-y-2"
        >
          <div
            class="space-y-2"
          >
            <p
              class="text-left text-xs font-medium text-muted-foreground"
            >
              Order ID
            </p>
            <p
              class="text-sm leading-none text-left text-foreground font-medium"
            >
              #ORD-2024-001
            </p>
          </div>
          <div
            class="space-y-2"
          >
            <p
              class="text-left text-xs font-medium text-muted-foreground"
            >
              Order Date
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              14 Sept 2024
            </p>
          </div>
          <div
            class="space-y-2"
          >
            <p
              class="text-left text-xs font-medium text-muted-foreground"
            >
              Total
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              £48.38
            </p>
          </div>
          <div
            class="space-y-2"
          >
            <p
              class="text-left text-xs font-medium text-muted-foreground"
            >
              Items
            </p>
            <p
              class="text-sm leading-none text-left text-foreground font-semibold"
            >
              2
            </p>
          </div>
        </div>
        <span
          class="inline-flex items-center justify-center rounded-full px-2 text-xs whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 shrink-0 font-semibold border-0 py-1 w-fit border-transparent bg-status-positive text-success-foreground"
          data-slot="badge"
          data-testid="order-status-badge"
        >
          Ready for Pickup
        </span>
      </div>
      <div
        class="flex flex-wrap gap-2"
      >
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
          >
            <img
              alt="Classic White Shirt"
              class="w-full h-full object-cover"
              loading="lazy"
              src="__ASSET_MOCK__"
            />
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
          >
            <img
              alt="Blue Dress Pants"
              class="w-full h-full object-cover"
              loading="lazy"
              src="__ASSET_MOCK__"
            />
          </div>
          <span
            aria-label="Quantity: 2"
            class="absolute -top-1 -right-1 flex min-w-4 h-4 items-center justify-center border-2 border-background bg-primary px-0.5 text-[10px] font-bold text-primary-foreground"
          >
            2
          </span>
        </div>
      </div>
      <div
        class="pt-2"
      >
        <span
          class="text-sm font-medium leading-none text-left inline-flex items-center gap-1 text-foreground underline"
        >
          View Order Details
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</a>
`;

exports[`OrderListItem stories snapshot > WithPickupLocation story renders and matches snapshot 1`] = `
<a
  class="block transition-opacity hover:opacity-95 m-0"
  href="/account/orders/ORD-2024-001"
>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui shadow-ui order-list-item-card py-0 border-0 border-b border-separator hover:bg-transparent"
    data-slot="card"
  >
    <div
      class="p-6 space-y-4 border-b border-separator"
      data-slot="card-content"
    >
      <div
        class="flex flex-wrap items-start justify-between -mx-6 -mt-6 px-6 pt-3 pb-3 mb-6 border-b border-separator bg-muted"
      >
        <div
          class="flex flex-wrap gap-x-8 gap-y-2"
        >
          <div
            class="space-y-2"
          >
            <p
              class="text-left text-xs font-medium text-muted-foreground"
            >
              Order ID
            </p>
            <p
              class="text-sm leading-none text-left text-foreground font-medium"
            >
              #ORD-2024-001
            </p>
          </div>
          <div
            class="space-y-2"
          >
            <p
              class="text-left text-xs font-medium text-muted-foreground"
            >
              Order Date
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              14 Sept 2024
            </p>
          </div>
          <div
            class="space-y-2"
          >
            <p
              class="text-left text-xs font-medium text-muted-foreground"
            >
              Total
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              £48.38
            </p>
          </div>
          <div
            class="space-y-2"
          >
            <p
              class="text-left text-xs font-medium text-muted-foreground"
            >
              Items
            </p>
            <p
              class="text-sm leading-none text-left text-foreground font-semibold"
            >
              2
            </p>
          </div>
        </div>
        <span
          class="inline-flex items-center justify-center rounded-full px-2 text-xs whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 shrink-0 font-semibold border-0 py-1 w-fit border-transparent bg-status-positive text-success-foreground"
          data-slot="badge"
          data-testid="order-status-badge"
        >
          Ready for Pickup
        </span>
      </div>
      <div
        class="flex flex-wrap gap-2"
      >
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
          >
            <img
              alt="Classic White Shirt"
              class="w-full h-full object-cover"
              loading="lazy"
              src="__ASSET_MOCK__"
            />
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
          >
            <img
              alt="Blue Dress Pants"
              class="w-full h-full object-cover"
              loading="lazy"
              src="__ASSET_MOCK__"
            />
          </div>
          <span
            aria-label="Quantity: 2"
            class="absolute -top-1 -right-1 flex min-w-4 h-4 items-center justify-center border-2 border-background bg-primary px-0.5 text-[10px] font-bold text-primary-foreground"
          >
            2
          </span>
        </div>
      </div>
      <div
        class="text-card-foreground flex flex-col gap-6 rounded-ui border-ui shadow-ui rounded-ui bg-muted border-border p-0"
        data-slot="card"
      >
        <div
          class="p-4 space-y-2"
          data-slot="card-content"
        >
          <div
            class="flex items-center gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-map-pin size-4 text-muted-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
              />
              <circle
                cx="12"
                cy="10"
                r="3"
              />
            </svg>
            <span
              class="text-sm leading-none text-left font-semibold text-foreground"
            >
              Pickup Location
            </span>
          </div>
          <div
            class="space-y-1 pl-6"
          >
            <div>
              <p
                class="text-left text-xs font-normal text-muted-foreground"
              >
                Location
              </p>
              <p
                class="text-sm font-medium leading-none text-left text-foreground"
              >
                Salesforce Foundations San Francisco
              </p>
            </div>
            <div>
              <p
                class="text-left text-xs font-normal text-muted-foreground"
              >
                Address
              </p>
              <p
                class="text-sm leading-none text-left text-foreground font-normal"
              >
                415 Mission Street, San Francisco, CA 94105
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pt-2"
      >
        <span
          class="text-sm font-medium leading-none text-left inline-flex items-center gap-1 text-foreground underline"
        >
          View Order Details
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</a>
`;

exports[`OrderListItem stories snapshot > WithReturnStatus story renders and matches snapshot 1`] = `
<a
  class="block transition-opacity hover:opacity-95 m-0"
  href="/account/orders/ORD-2024-001"
>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui shadow-ui order-list-item-card py-0 border-0 border-b border-separator hover:bg-transparent"
    data-slot="card"
  >
    <div
      class="p-6 space-y-4 border-b border-separator"
      data-slot="card-content"
    >
      <div
        class="flex flex-wrap items-start justify-between -mx-6 -mt-6 px-6 pt-3 pb-3 mb-6 border-b border-separator bg-muted"
      >
        <div
          class="flex flex-wrap gap-x-8 gap-y-2"
        >
          <div
            class="space-y-2"
          >
            <p
              class="text-left text-xs font-medium text-muted-foreground"
            >
              Order ID
            </p>
            <p
              class="text-sm leading-none text-left text-foreground font-medium"
            >
              #ORD-2024-001
            </p>
          </div>
          <div
            class="space-y-2"
          >
            <p
              class="text-left text-xs font-medium text-muted-foreground"
            >
              Order Date
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              14 Sept 2024
            </p>
          </div>
          <div
            class="space-y-2"
          >
            <p
              class="text-left text-xs font-medium text-muted-foreground"
            >
              Total
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              £48.38
            </p>
          </div>
          <div
            class="space-y-2"
          >
            <p
              class="text-left text-xs font-medium text-muted-foreground"
            >
              Items
            </p>
            <p
              class="text-sm leading-none text-left text-foreground font-semibold"
            >
              2
            </p>
          </div>
        </div>
        <span
          class="inline-flex items-center justify-center rounded-full px-2 text-xs whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 shrink-0 font-semibold border-0 py-1 w-fit border-transparent bg-muted text-muted-foreground"
          data-slot="badge"
          data-testid="order-return-status-badge"
        >
          Partial Return Complete
        </span>
      </div>
      <div
        class="flex flex-wrap gap-2"
      >
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
          >
            <img
              alt="Classic White Shirt"
              class="w-full h-full object-cover"
              loading="lazy"
              src="__ASSET_MOCK__"
            />
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
          >
            <img
              alt="Blue Dress Pants"
              class="w-full h-full object-cover"
              loading="lazy"
              src="__ASSET_MOCK__"
            />
          </div>
          <span
            aria-label="Quantity: 2"
            class="absolute -top-1 -right-1 flex min-w-4 h-4 items-center justify-center border-2 border-background bg-primary px-0.5 text-[10px] font-bold text-primary-foreground"
          >
            2
          </span>
        </div>
      </div>
      <div
        class="pt-2"
      >
        <span
          class="text-sm font-medium leading-none text-left inline-flex items-center gap-1 text-foreground underline"
        >
          View Order Details
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</a>
`;

exports[`OrderListItem stories snapshot > WithThumbnailOverflow story renders and matches snapshot 1`] = `
<a
  class="block transition-opacity hover:opacity-95 m-0"
  href="/account/orders/ORD-2024-001"
>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-ui border-ui shadow-ui order-list-item-card py-0 border-0 border-b border-separator hover:bg-transparent"
    data-slot="card"
  >
    <div
      class="p-6 space-y-4 border-b border-separator"
      data-slot="card-content"
    >
      <div
        class="flex flex-wrap items-start justify-between -mx-6 -mt-6 px-6 pt-3 pb-3 mb-6 border-b border-separator bg-muted"
      >
        <div
          class="flex flex-wrap gap-x-8 gap-y-2"
        >
          <div
            class="space-y-2"
          >
            <p
              class="text-left text-xs font-medium text-muted-foreground"
            >
              Order ID
            </p>
            <p
              class="text-sm leading-none text-left text-foreground font-medium"
            >
              #ORD-2024-001
            </p>
          </div>
          <div
            class="space-y-2"
          >
            <p
              class="text-left text-xs font-medium text-muted-foreground"
            >
              Order Date
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              14 Sept 2024
            </p>
          </div>
          <div
            class="space-y-2"
          >
            <p
              class="text-left text-xs font-medium text-muted-foreground"
            >
              Total
            </p>
            <p
              class="text-sm font-medium leading-none text-left text-foreground"
            >
              £48.38
            </p>
          </div>
          <div
            class="space-y-2"
          >
            <p
              class="text-left text-xs font-medium text-muted-foreground"
            >
              Items
            </p>
            <p
              class="text-sm leading-none text-left text-foreground font-semibold"
            >
              18
            </p>
          </div>
        </div>
        <span
          class="inline-flex items-center justify-center rounded-full px-2 text-xs whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 shrink-0 font-semibold border-0 py-1 w-fit border-transparent bg-status-positive text-success-foreground"
          data-slot="badge"
          data-testid="order-status-badge"
        >
          Delivered
        </span>
      </div>
      <div
        class="flex flex-wrap gap-2"
      >
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
          >
            <img
              alt="Product 1"
              class="w-full h-full object-cover"
              loading="lazy"
              src="__ASSET_MOCK__"
            />
          </div>
          <span
            aria-label="Quantity: 2"
            class="absolute -top-1 -right-1 flex min-w-4 h-4 items-center justify-center border-2 border-background bg-primary px-0.5 text-[10px] font-bold text-primary-foreground"
          >
            2
          </span>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
          >
            <img
              alt="Product 2"
              class="w-full h-full object-cover"
              loading="lazy"
              src="__ASSET_MOCK__"
            />
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
          >
            <img
              alt="Product 3"
              class="w-full h-full object-cover"
              loading="lazy"
              src="__ASSET_MOCK__"
            />
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
          >
            <img
              alt="Product 4"
              class="w-full h-full object-cover"
              loading="lazy"
              src="__ASSET_MOCK__"
            />
          </div>
          <span
            aria-label="Quantity: 2"
            class="absolute -top-1 -right-1 flex min-w-4 h-4 items-center justify-center border-2 border-background bg-primary px-0.5 text-[10px] font-bold text-primary-foreground"
          >
            2
          </span>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
          >
            <img
              alt="Product 5"
              class="w-full h-full object-cover"
              loading="lazy"
              src="__ASSET_MOCK__"
            />
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
          >
            <img
              alt="Product 6"
              class="w-full h-full object-cover"
              loading="lazy"
              src="__ASSET_MOCK__"
            />
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
          >
            <img
              alt="Product 7"
              class="w-full h-full object-cover"
              loading="lazy"
              src="__ASSET_MOCK__"
            />
          </div>
          <span
            aria-label="Quantity: 2"
            class="absolute -top-1 -right-1 flex min-w-4 h-4 items-center justify-center border-2 border-background bg-primary px-0.5 text-[10px] font-bold text-primary-foreground"
          >
            2
          </span>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
          >
            <img
              alt="Product 8"
              class="w-full h-full object-cover"
              loading="lazy"
              src="__ASSET_MOCK__"
            />
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
          >
            <img
              alt="Product 9"
              class="w-full h-full object-cover"
              loading="lazy"
              src="__ASSET_MOCK__"
            />
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
          >
            <img
              alt="Product 10"
              class="w-full h-full object-cover"
              loading="lazy"
              src="__ASSET_MOCK__"
            />
          </div>
          <span
            aria-label="Quantity: 2"
            class="absolute -top-1 -right-1 flex min-w-4 h-4 items-center justify-center border-2 border-background bg-primary px-0.5 text-[10px] font-bold text-primary-foreground"
          >
            2
          </span>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
          >
            <img
              alt="Product 11"
              class="w-full h-full object-cover"
              loading="lazy"
              src="__ASSET_MOCK__"
            />
          </div>
        </div>
        <div
          class="relative"
        >
          <div
            class="w-16 h-16 overflow-hidden rounded-ui bg-muted border border-border"
          >
            <img
              alt="Product 12"
              class="w-full h-full object-cover"
              loading="lazy"
              src="__ASSET_MOCK__"
            />
          </div>
        </div>
        <div
          class="w-16 h-16 bg-muted border border-border rounded-ui flex items-center justify-center"
        >
          <span
            class="text-sm font-medium leading-none text-left text-muted-foreground"
          >
            +
            6
          </span>
        </div>
      </div>
      <div
        class="pt-2"
      >
        <span
          class="text-sm font-medium leading-none text-left inline-flex items-center gap-1 text-foreground underline"
        >
          View Order Details
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</a>
`;
